--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,8 @@
         android:layout_marginRight="10dp"
         android:layout_weight="10"
         android:text="Calculate"
-        android:textColor="@color/grey_light"/>
+        android:textColor="@color/white"
+        android:background="@drawable/button_selector"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -91,6 +92,7 @@
             android:layout_marginLeft="5dp"
             android:background="@color/grey_med_dark"
             android:gravity="center_vertical"
+            android:textColor="@color/white"
             android:textSize="30sp"
             android:typeface="normal"
             android:id="@+id/txt_converted"
